--- a/thankyou.html
+++ b/thankyou.html
@@ -59,6 +59,7 @@
           <div class="col-md-12">
             <h2>Thank you!</h2>
             <p>You have successfully registered for the Run For Love 5K.</p>
+            <p>Be sure to follow our <a href="https://www.facebook.com/events/315930732232063/?active_tab=about" target="_blank">Facebook page</a> for any news or updates.</p>
             <p><a href="index.html">Click here to return to the home page.</a></p>
           </div>
         </div>
