--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <div class="navbar">
       <div class="container">
         <div class="row">
-          <div id="logo"><a href="index.html"><img src="img/run_for_love_logo_white.png" alt="Run For Love 5K Logo"></a></div>
+          <div id="logo"><a href="./"><img src="img/run_for_love_logo_white.png" alt="Run For Love 5K Logo"></a></div>
           <ul id="menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="registration.html">Registration</a></li>
-            <li><a href="sponsors.html">Sponsors</a></li>
+            <li><a href="./">Home</a></li>
+            <li><a href="registration">Registration</a></li>
+            <li><a href="sponsors">Sponsors</a></li>
           </ul>
         </div>
       </div>
@@ -57,7 +57,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <button type="button" class="btn btn-danger btn-lg"><a href="registration.html">Register Now</a></button>
+            <button type="button" class="btn btn-danger btn-lg"><a href="registration">Register Now</a></button>
           </div>
         </div>
       </div>
@@ -67,7 +67,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="img/pic.jpg" alt="Last Year Picture">
+            <img src="img/group.jpg" alt="Last Year Picture">
           </div>
           <div class="col-md-6">
             <h2>Last year you helped raise <strong>$1,650</strong> to fight substance use and addiction!</h2>
@@ -81,14 +81,14 @@
     <div class="father-bills">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-sm-pull-6">
+          <div class="col-md-6">
             <h2>Father Bill's & Mainspring</h2>
             <p>For more than three decades, Father Bill’s & MainSpring (FBMS), has been a leading innovator of ending homelessness. Their mission is to end and prevent homelessness in Southern Massachusetts with programs that provide emergency and permanent housing and help people obtain skills, jobs, housing, and services. They help people who are struggling with homelessness, or are at risk of homelessness, to achieve self-sufficiency.</p>
             <p>While they do not directly service those in recovery, they do have a “housing first” philosophy, meaning that having a safe place to stay is the foundation to success in other parts of life. Father Bill’s & Mainspring has a vital role in helping people in recovery in the local area, as people all too often end up homeless due to their addiction. That is why they are the perfect fit for our cause.</p>
             <p>Our father, Scott Benoit, had also stayed at and received support from Father Bill’s and MainSpring a couple times during his struggle with addiction and homelessness. He even worked there for some time while he was in recovery. Father Bill’s & Mainspring was a big crutch when he needed support and a place to stay, and we are proud to be able to help such a life-changing organization.</p>
             <p>If you would like any more information on Father Bill’s & Mainspring, please check out their website: <a href="http://helpfbms.org" target="_blank">helpfbms.org</a></p>
           </div>
-          <div class="col-md-6 col-md-push-6">
+          <div class="col-md-6">
             <img src="img/FBMS_logo.png" alt="Father Bill's and Mainspring Logo">
           </div>
         </div>
@@ -135,7 +135,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <button type="button" class="btn btn-danger btn-lg"><a href="registration.html">Register Now</a></button>
+            <button type="button" class="btn btn-danger btn-lg"><a href="registration">Register Now</a></button>
           </div>
         </div>
       </div>
@@ -147,9 +147,9 @@
             <div class="col-md-3">
               <h4>Menu</h4>
               <ul id="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="registration.html">Registration</a></li>
-                <li><a href="sponsors.html">Sponsors</a></li>
+                <li><a href="./">Home</a></li>
+                <li><a href="registration">Registration</a></li>
+                <li><a href="sponsors">Sponsors</a></li>
               </ul>
             </div>
             <div class="col-md-3">
