--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="row">
           <div class="col-md-12">
             <h2>Our Story</h2>
-            <p>Our father, Scott Benoit, passed away in June 2017 due to another person’s addiction and actions while under the influence. While the story is devastating, we hope to make light of the situation and use our story to benefit the well-being of those still fighting the battle against substance use and addiction.</p>
+            <p>Our father, Scott Benoit, passed away in June 2017 due to another person’s addiction and actions while under the influence. While the story is devastating, we want to bring hope from the situation and use our story to benefit the well-being of those still fighting the battle against substance use and addiction.</p>
             <p>Scott was an alcoholic. We witnessed his battle with his disease first-hand and know the struggles people suffering from addiction face. It’s a living nightmare, and unfortunately, people facing that fight do not always get the support they need. There is a stigma around being ‘an addict’ that implies that you are less than and hopeless. That is just not true. We know substance use is a chronic disorder, and just like any other chronic illness, can be treated with constant work and a lot of support.</p>
             <p>That is why we started this 5K, to help raise awareness for those battling substance use disorder like our father did. Together, we can fight the stigma and turn our tragic story into someone else’s light at the end of the tunnel.</p>
           </div>
